Integrated the usage of PhysicsTools string selectors for electrons and muons (to be extended to MET and jets).

--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -28,6 +28,10 @@ process TopObjects  = {
             untracked vstring outputCommands = {
               	"drop *",
               	"keep *_*_*_TopObjects",
+              	"keep *_allTopElectrons_*_*",
+              	"keep *_selectedTopElectrons_*_*",
+              	"keep *_allTopMuons_*_*",
+              	"keep *_selectedTopMuons_*_*",
           	"keep recoCaloMETs_*_*_*",
           	"keep recoCaloJets_*_*_*",
           	"keep recoJetTags_*_*_*",
@@ -35,12 +39,11 @@ process TopObjects  = {
           	"keep recoGenJets_*_*_*",
           	"keep recoTracks_*_*_*",
           	"keep recoSoftLeptonTagInfos_*_*_*",
-          	"keep *_globalMuons_*_*",
           	"keep *_genParticleCandidates_*_*"
             }
             untracked bool verbose = false
           }
 
-	path p = {highLevelReco, TopObjects}
+	path p = { highLevelReco, topObjects }
         endpath outpath = { out }	
 }
