--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -2,18 +2,17 @@ process TopObjects  = {
 	
 	# initialize MessageLogger
    	  include "FWCore/MessageLogger/data/MessageLogger.cfi"
-	  replace MessageLogger.cout.threshold = "ERROR"
+	  replace MessageLogger.cout.threshold = "DEBUG"
 	  
    	# input
-  	  #source = PoolSource {
-          #  untracked vstring fileNames =
-          #  {
-          #    "dcap://maite.iihe.ac.be/pnfs/iihe/cms/ph/sc4/store/mc/2007/4/12/ttbar_gen_rec_allReco/0001/063E8B56-80EA-DB11-A95D-00001A19E30D.root"
-          #  }
-          #  untracked int32   maxEvents = 100
-          #  untracked uint32 skipEvents = 0
-	  #}
-	  include "TopQuarkAnalysis/TopObjectProducers/test/RecoInput.cfi"
+  	  source = PoolSource {
+            untracked vstring fileNames =
+            {
+              "dcap://maite.iihe.ac.be/pnfs/iihe/cms/ph/sc4/store/mc/2007/4/12/ttbar_gen_rec_allReco/0001/063E8B56-80EA-DB11-A95D-00001A19E30D.root"
+            }
+            untracked int32   maxEvents = -1
+            untracked uint32 skipEvents = 0
+	  }
 	
 	# perform high level reco tasks 
 	  include "TopQuarkAnalysis/TopObjectProducers/data/HighLevelReco.cff"
@@ -24,26 +23,16 @@ process TopObjects  = {
 	
 	# output
           module out = PoolOutputModule {
-            untracked string fileName = "TopObjects.root"
+            untracked string fileName = "TopObjects_semimu.root"
             untracked vstring outputCommands = {
-              	"drop *",
-              	"keep *_*_*_TopObjects",
-              	"keep *_allTopElectrons_*_*",
-              	"keep *_selectedTopElectrons_*_*",
-              	"keep *_allTopMuons_*_*",
-              	"keep *_selectedTopMuons_*_*",
-          	"keep recoCaloMETs_*_*_*",
-          	"keep recoCaloJets_*_*_*",
-          	"keep recoJetTags_*_*_*",
-          	"keep recoVertexs_*_*_*",
-          	"keep recoGenJets_*_*_*",
-          	"keep recoTracks_*_*_*",
-          	"keep recoSoftLeptonTagInfos_*_*_*",
-          	"keep *_genParticleCandidates_*_*"
+		"drop *",
+		"keep *_genParticleCandidates_*_*",
+		//"keep reco*_*_*_*",
+		"keep *_*_*_TopObjects"
             }
-            untracked bool verbose = false
+            untracked bool verbose = true
           }
 
-	path p = { highLevelReco, topObjects }
+	path p = { highLevelReco, allTopObjects }
         endpath outpath = { out }	
 }
