adaptation for 16X migration

--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -1,9 +1,12 @@
 process TopObjects  = {
 	
 	# initialize MessageLogger
-   	  include "FWCore/MessageLogger/data/MessageLogger.cfi"
-	  replace MessageLogger.cout.threshold = "DEBUG"
-	  
+	  service = MessageLogger
+        {
+	  untracked vstring destinations = { "cout" }
+	  untracked PSet cout = { untracked string threshold = "INFO"
+			     }
+	 }      
    	# input
   	#  source = PoolSource {
         #    untracked vstring fileNames =
