changed default file path

--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -27,7 +27,7 @@ process TopObjects  = {
 	
 	# output
           module out = PoolOutputModule {
-            untracked string fileName = "TopObjects_semimu.root"
+            untracked string fileName = "/tmp/Layer1output.root"
             untracked vstring outputCommands = {
 		"drop *",
 		"keep *_genParticleCandidates_*_*",
