--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -21,6 +21,7 @@ process TopObjects  = {
 	 
         # build TopObjects
 	  include "TopQuarkAnalysis/TopObjectProducers/data/TopObjectProducers.cff"
+	  replace allLayer1TopTaus.addResolutions = false
 	
 	# output
           module out = PoolOutputModule {
