tmp turned of the inclusion of tau resolutions, as no up to date resolution root-file is availble

--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -24,6 +24,7 @@ process TopObjects  = {
 	 
         # build TopObjects
 	  include "TopQuarkAnalysis/TopObjectProducers/data/TopObjectProducers.cff"
+          replace allLayer1TopTaus.addResolutions = false
 	
 	# output
           module out = PoolOutputModule {
