new resolution files

--- a/test/TopObjectReconstruction.cfg
+++ b/test/TopObjectReconstruction.cfg
@@ -29,7 +29,7 @@ process TopObjects  = {
             untracked vstring outputCommands = {
 		"drop *",
 		"keep *_genParticleCandidates_*_*",
-		//"keep reco*_*_*_*",
+		"keep reco*_*_*_*",
 		"keep *_*_*_TopObjects"
             }
             untracked bool verbose = true
