--- a/test/tqafLayer1_fromScratch_fast.cfg
+++ b/test/tqafLayer1_fromScratch_fast.cfg
@@ -48,7 +48,7 @@ process TQAF = {
     untracked string fileName = "TQAFLayer1_Output.fromScratch_fast.root"
     using EventSelection
     using tqafEventContent
-    untracked bool verbose = true
+    untracked bool verbose = false
   }
 
   endpath outpath = { out }
