ready and tested

--- a/test/tqafLayer1_fromAOD_full.cfg
+++ b/test/tqafLayer1_fromAOD_full.cfg
@@ -1,5 +1,4 @@
-process TQAF = {
-
+process Test = {
   # initialize MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   replace MessageLogger.cerr.threshold = "INFO"
@@ -9,7 +8,6 @@ process TQAF = {
   # input
   include "TopQuarkAnalysis/Examples/test/RecoInput.cfi"
 	
-
   ### TQAF ###
 
   # TQAF Layer 1 TopObject production
@@ -49,7 +47,5 @@ process TQAF = {
     }
     untracked bool verbose = true
   }
-
   endpath outpath = { out }
-
 }
