--- a/test/tqafLayer1_fromScratch_fast.cfg
+++ b/test/tqafLayer1_fromScratch_fast.cfg
@@ -1,5 +1,4 @@
-process TQAF = {
-
+process Test = {
   # initialize MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   replace MessageLogger.cerr.threshold = "INFO"
@@ -8,7 +7,6 @@ process TQAF = {
 
   untracked PSet maxEvents = { untracked int32 input = 10 }
 
-
   ### FAMOS ###
   include "PhysicsTools/PatAlgos/data/famos/boostrapWithFamos.cff"
 
@@ -16,7 +14,6 @@ process TQAF = {
 
   # TQAF Layer 1 TopObject production
   include "TopQuarkAnalysis/TopObjectProducers/data/TQAFLayer1_fast.cff"
-
 
   ### Output ###
 
@@ -51,7 +48,5 @@ process TQAF = {
     }
     untracked bool verbose = false
   }
-
   endpath outpath = { out }
-
 }
