streamlining of filenames aso

--- a/test/tqafLayer1_fromAOD_full.cfg
+++ b/test/tqafLayer1_fromAOD_full.cfg
@@ -7,7 +7,7 @@ process Test = {
 
   # input
   include "TopQuarkAnalysis/Examples/test/RecoInput.cfi"
-  untracked PSet maxEvents = {untracked int32 input = 1000}
+  untracked PSet maxEvents = {untracked int32 input = 100}
 	
   ### TQAF ###
 
@@ -30,7 +30,7 @@ process Test = {
   }
 
   module out = PoolOutputModule {
-    untracked string fileName = "TQAFLayer1.CSA07Electron.CMSSW_1_6_7-CSA07-Chowder-B1-PDElectron-Skims6-topDiLepton2Electron.USER.root"
+    untracked string fileName = "TQAFLayer1Output.root"
     using EventSelection
     untracked vstring outputCommands = {
       "drop *",
