added common pat EventContent

--- a/test/tqafLayer1_fromAOD_full.cfg
+++ b/test/tqafLayer1_fromAOD_full.cfg
@@ -22,6 +22,15 @@ process Test = {
     tqafLayer1
   }
 
+  # define the event content
+  block tqafEventContent = {
+    untracked vstring outputCommands = {
+      "drop *"
+    }
+  }
+  include "TopQuarkAnalysis/TopObjectProducers/data/tqafLayer1_EventContent.cff"
+  replace tqafEventContent.outputCommands += patLayer1EventContent.outputCommands
+
   # to only accept events passing the complete path
   block EventSelection = {
     untracked PSet SelectEvents = {
@@ -32,20 +41,7 @@ process Test = {
   module out = PoolOutputModule {
     untracked string fileName = "TQAFLayer1Output.root"
     using EventSelection
-    untracked vstring outputCommands = {
-      "drop *",
-      "keep edmTriggerResults_TriggerResults_*_*",
-      "keep *_genParticles_*_*",
-      "keep recoJetTags_*_*_*",
-      "drop recoJetTags_coneIsolationTauJetTags_*_*",
-      "keep recoTracks_ctfWithMaterialTracks_*_*",
-      "keep *_offlinePrimaryVerticesFromCTFTracks_*_*",
-      "keep *_selectedLayer1Electrons_*_*",
-      "keep *_selectedLayer1Muons_*_*",
-      "keep *_selectedLayer1Taus_*_*",
-      "keep *_selectedLayer1Jets_*_*",
-      "keep *_selectedLayer1METs_*_*"
-    }
+    using tqafEventContent
     untracked bool verbose = true
   }
   endpath outpath = { out }
