backports from 21X and minor fixes

--- a/test/tqafLayer1_fromAOD_full.cfg
+++ b/test/tqafLayer1_fromAOD_full.cfg
@@ -1,4 +1,4 @@
-process Test = {
+process TEST = {
   # initialize MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   replace MessageLogger.cerr.threshold = "INFO"
